# Segmentizer

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  ExtractCodeSegment.cc
test/ExtractCodeSegment/: add.cc
